fix scroll bar squashing content

--- a/src/less/views/code.less
+++ b/src/less/views/code.less
@@ -3,6 +3,10 @@
     height: 100%;
     overflow: auto;
   }
+  .file-browser {
+    height: 100%;
+    overflow-y: scroll;
+  }
 
   .file-browser {
     float: right;
